[gd_scene load_steps=30 format=3 uid="uid://didhhghxmey0r"]

[ext_resource type="Script" path="res://scripts/setup_scene.gd" id="1_f6cc2"]
[ext_resource type="Texture2D" uid="uid://cci2sp743u6hi" path="res://sprites/ai_selected.png" id="2_1q3y1"]
[ext_resource type="StyleBox" uid="uid://ba8gr0be1lomg" path="res://styles/style_panel_map_list.tres" id="2_b0y7v"]
[ext_resource type="Texture2D" uid="uid://b11v165rsaphx" path="res://sprites/next.png" id="2_q4ghs"]
[ext_resource type="Texture2D" uid="uid://b24er4e3fq8o6" path="res://sprites/ai_default.png" id="2_qggyn"]
[ext_resource type="StyleBox" uid="uid://crwlkegnfaves" path="res://styles/style_label_align_picker.tres" id="2_vsmum"]
[ext_resource type="Texture2D" uid="uid://b7ruo67blmrg" path="res://sprites/ai_turtle.png" id="2_wi0e8"]
[ext_resource type="Texture2D" uid="uid://sppf5wxfa1bt" path="res://sprites/add.png" id="3_6y5uw"]
[ext_resource type="Texture2D" uid="uid://tmryy03p6doc" path="res://sprites/ai_neuron.png" id="3_g3ljl"]
[ext_resource type="Texture2D" uid="uid://cen7b3g4p67w" path="res://sprites/add_pressed.png" id="4_tvpod"]
[ext_resource type="Texture2D" uid="uid://chqgj3tiyx6na" path="res://sprites/remove.png" id="5_056it"]
[ext_resource type="Texture2D" uid="uid://1i36seg78ctk" path="res://sprites/ai_cheater.png" id="5_qe1ei"]
[ext_resource type="Texture2D" uid="uid://deqhvnfw114vp" path="res://sprites/advance.png" id="5_x6iy8"]
[ext_resource type="Texture2D" uid="uid://lbt7xqph68pb" path="res://sprites/remove_pressed.png" id="6_ckrtw"]
[ext_resource type="Texture2D" uid="uid://c23kwcfws5x1n" path="res://sprites/save_replay.png" id="8_jp1fi"]
[ext_resource type="Texture2D" uid="uid://fo6lu5lqw04d" path="res://sprites/next_pressed.png" id="10_qo64o"]
[ext_resource type="Texture2D" uid="uid://mbmk666gc1gh" path="res://sprites/save_replay_pressed.png" id="12_jfhey"]
[ext_resource type="Texture2D" uid="uid://dmfov6gdj5eub" path="res://sprites/advance_pressed.png" id="14_pdvw5"]
[ext_resource type="StyleBox" uid="uid://ciikkahxcqynr" path="res://styles/style_label_pause.tres" id="17_tni5w"]
[ext_resource type="Shader" path="res://scripts/shader_ui_button.gdshader" id="18_gebv2"]
[ext_resource type="Texture2D" uid="uid://d2ixgtwhalidj" path="res://sprites/mask_accept.png" id="19_r4263"]
[ext_resource type="Texture2D" uid="uid://dm2nl24gy8gxh" path="res://sprites/accept.png" id="20_fokjq"]
[ext_resource type="Texture2D" uid="uid://boyn6qwdwdd1o" path="res://sprites/accept_pressed.png" id="21_pjtuv"]
[ext_resource type="Texture2D" uid="uid://d3l22gyjawbxv" path="res://sprites/mask_deny.png" id="22_s1ohj"]
[ext_resource type="Texture2D" uid="uid://ex66wqntm5fi" path="res://sprites/deny.png" id="23_56xsy"]
[ext_resource type="Texture2D" uid="uid://dg7vk6rgj3o7c" path="res://sprites/deny_pressed.png" id="24_uyu6e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kl6wx"]
bg_color = Color(0, 0, 0, 0.498039)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_l4hw3"]
shader = ExtResource("18_gebv2")
shader_parameter/value = 0.0
shader_parameter/mask = ExtResource("19_r4263")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fbdoa"]
shader = ExtResource("18_gebv2")
shader_parameter/value = 0.0
shader_parameter/mask = ExtResource("22_s1ohj")

[node name="Setup_Scene" type="Node2D"]
script = ExtResource("1_f6cc2")

[node name="cam" type="Camera2D" parent="."]
position = Vector2(576, 320)

[node name="map" type="Node2D" parent="."]
z_index = -100

[node name="tintable_ui" type="Node2D" parent="."]
z_index = 100

[node name="map_list" type="ItemList" parent="tintable_ui"]
offset_left = 32.0
offset_top = 72.0
offset_right = 480.0
offset_bottom = 608.0
focus_mode = 0
theme_override_styles/panel = ExtResource("2_b0y7v")

[node name="map_directory" type="OptionButton" parent="tintable_ui"]
offset_left = 112.0
offset_top = 32.0
offset_right = 480.0
offset_bottom = 64.0
focus_mode = 0

[node name="add_directory" type="TextureButton" parent="tintable_ui"]
offset_left = 32.0
offset_top = 32.0
offset_right = 64.0
offset_bottom = 64.0
texture_normal = ExtResource("3_6y5uw")
texture_pressed = ExtResource("4_tvpod")

[node name="remove_directory" type="TextureButton" parent="tintable_ui"]
offset_left = 72.0
offset_top = 32.0
offset_right = 104.0
offset_bottom = 64.0
texture_normal = ExtResource("5_056it")
texture_pressed = ExtResource("6_ckrtw")

[node name="Panel" type="Panel" parent="tintable_ui"]
offset_left = 512.0
offset_top = 32.0
offset_right = 1120.0
offset_bottom = 216.0
theme_override_styles/panel = ExtResource("2_vsmum")

[node name="map_name" type="Label" parent="tintable_ui"]
offset_left = 512.0
offset_top = 32.0
offset_right = 1120.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1

[node name="lore" type="Label" parent="tintable_ui"]
offset_left = 512.0
offset_top = 80.0
offset_right = 1120.0
offset_bottom = 216.0
horizontal_alignment = 1
autowrap_mode = 2
clip_text = true

[node name="def" type="Control" parent="tintable_ui"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="map_data" type="Label" parent="tintable_ui/def"]
layout_mode = 0
offset_left = 512.0
offset_top = 80.0
offset_right = 712.0
offset_bottom = 216.0
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 24
horizontal_alignment = 2

[node name="leaders" type="HSlider" parent="tintable_ui/def"]
layout_mode = 0
offset_left = 720.0
offset_top = 112.0
offset_right = 1112.0
offset_bottom = 144.0
focus_mode = 0
min_value = 2.0
max_value = 2.0
value = 2.0

[node name="players" type="HSlider" parent="tintable_ui/def"]
layout_mode = 0
offset_left = 720.0
offset_top = 144.0
offset_right = 1112.0
offset_bottom = 168.0
focus_mode = 0
max_value = 0.0

[node name="aliances" type="HSlider" parent="tintable_ui/def"]
layout_mode = 0
offset_left = 720.0
offset_top = 168.0
offset_right = 1112.0
offset_bottom = 200.0
focus_mode = 0
min_value = 1.0
max_value = 1.0
value = 1.0

[node name="diff" type="Control" parent="tintable_ui"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="opponent" type="Label" parent="tintable_ui/diff"]
layout_mode = 0
offset_left = 536.0
offset_top = 112.0
offset_right = 656.0
offset_bottom = 176.0
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 20
text = "OPPONENT:"
horizontal_alignment = 1

[node name="AiSelected" type="Sprite2D" parent="tintable_ui/diff"]
position = Vector2(664, 96)
texture = ExtResource("2_1q3y1")
centered = false
offset = Vector2(-4, -4)

[node name="ai_turtle" type="TextureButton" parent="tintable_ui/diff"]
layout_mode = 0
offset_left = 664.0
offset_top = 96.0
offset_right = 760.0
offset_bottom = 192.0
texture_normal = ExtResource("2_wi0e8")

[node name="ai_default" type="TextureButton" parent="tintable_ui/diff"]
layout_mode = 0
offset_left = 776.0
offset_top = 96.0
offset_right = 872.0
offset_bottom = 192.0
texture_normal = ExtResource("2_qggyn")

[node name="ai_neural" type="TextureButton" parent="tintable_ui/diff"]
layout_mode = 0
offset_left = 888.0
offset_top = 96.0
offset_right = 984.0
offset_bottom = 192.0
texture_normal = ExtResource("3_g3ljl")

[node name="ai_cheater" type="TextureButton" parent="tintable_ui/diff"]
layout_mode = 0
offset_left = 1000.0
offset_top = 96.0
offset_right = 1096.0
offset_bottom = 192.0
texture_normal = ExtResource("5_qe1ei")

[node name="preset" type="Label" parent="tintable_ui/diff"]
visible = false
layout_mode = 0
offset_left = 528.0
offset_top = 88.0
offset_right = 1104.0
offset_bottom = 200.0
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_kl6wx")
text = "LOCKED BY MAP MAKER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="next_menu" type="TextureButton" parent="tintable_ui"]
offset_left = 1056.0
offset_top = 216.0
offset_right = 1120.0
offset_bottom = 280.0
texture_normal = ExtResource("2_q4ghs")
texture_pressed = ExtResource("10_qo64o")

[node name="replay" type="TextureButton" parent="tintable_ui"]
offset_left = 848.0
offset_top = 480.0
offset_right = 976.0
offset_bottom = 608.0
texture_normal = ExtResource("8_jp1fi")
texture_pressed = ExtResource("12_jfhey")

[node name="play" type="TextureButton" parent="tintable_ui"]
offset_left = 992.0
offset_top = 480.0
offset_right = 1120.0
offset_bottom = 608.0
texture_normal = ExtResource("5_x6iy8")
texture_pressed = ExtResource("14_pdvw5")

[node name="dir_warning" type="Label" parent="tintable_ui"]
visible = false
offset_left = 296.0
offset_top = 184.0
offset_right = 856.0
offset_bottom = 448.0
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("17_tni5w")
text = "Unofficial maps can contain malicious
code. Make sure you trust the map
creator before loading their maps.

Add a map directory?"
horizontal_alignment = 1

[node name="yes" type="TextureButton" parent="tintable_ui/dir_warning"]
modulate = Color(0.713726, 0.890196, 0.65098, 1)
material = SubResource("ShaderMaterial_l4hw3")
layout_mode = 0
offset_left = 216.0
offset_top = 208.0
offset_right = 264.0
offset_bottom = 256.0
texture_normal = ExtResource("20_fokjq")
texture_pressed = ExtResource("21_pjtuv")

[node name="no" type="TextureButton" parent="tintable_ui/dir_warning"]
modulate = Color(1, 0.717647, 0.698039, 1)
material = SubResource("ShaderMaterial_fbdoa")
layout_mode = 0
offset_left = 296.0
offset_top = 208.0
offset_right = 344.0
offset_bottom = 256.0
texture_normal = ExtResource("23_56xsy")
texture_pressed = ExtResource("24_uyu6e")

[node name="replay_window" type="FileDialog" parent="."]
initial_position = 1
title = "Open a File"
size = Vector2i(480, 480)
borderless = true
transparent = true
popup_window = true
ok_button_text = "Open"
file_mode = 0
access = 1
filters = PackedStringArray("*.json")

[node name="dir_window" type="FileDialog" parent="."]
initial_position = 1
title = "Open a Directory"
size = Vector2i(480, 480)
borderless = true
transparent = true
popup_window = true
ok_button_text = "Select Current Folder"
dialog_hide_on_ok = true
file_mode = 2
access = 1
filters = PackedStringArray("*.json")

[connection signal="item_activated" from="tintable_ui/map_list" to="." method="_on_map_list_item_activated"]
[connection signal="item_selected" from="tintable_ui/map_list" to="." method="_on_map_list_item_selected"]
[connection signal="item_selected" from="tintable_ui/map_directory" to="." method="_on_map_directory_item_selected"]
[connection signal="pressed" from="tintable_ui/add_directory" to="." method="_on_add_directory_pressed"]
[connection signal="pressed" from="tintable_ui/remove_directory" to="." method="_on_remove_directory_pressed"]
[connection signal="value_changed" from="tintable_ui/def/leaders" to="." method="_on_leaders_value_changed"]
[connection signal="value_changed" from="tintable_ui/def/players" to="." method="_on_players_value_changed"]
[connection signal="value_changed" from="tintable_ui/def/aliances" to="." method="_on_def_slider_value_changed"]
[connection signal="pressed" from="tintable_ui/diff/ai_turtle" to="." method="_on_ai_turtle_pressed"]
[connection signal="pressed" from="tintable_ui/diff/ai_default" to="." method="_on_ai_default_pressed"]
[connection signal="pressed" from="tintable_ui/diff/ai_neural" to="." method="_on_ai_neural_pressed"]
[connection signal="pressed" from="tintable_ui/diff/ai_cheater" to="." method="_on_ai_cheater_pressed"]
[connection signal="pressed" from="tintable_ui/next_menu" to="." method="_on_next_menu_pressed"]
[connection signal="pressed" from="tintable_ui/replay" to="." method="_on_replay_pressed"]
[connection signal="pressed" from="tintable_ui/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="tintable_ui/dir_warning/yes" to="." method="_dir_warning_confirm"]
[connection signal="pressed" from="tintable_ui/dir_warning/no" to="." method="_dir_warning_close"]
[connection signal="file_selected" from="replay_window" to="." method="_on_replay_window_file_selected"]
[connection signal="dir_selected" from="dir_window" to="." method="_on_dir_window_dir_selected"]
